--- a/docs/README.md.in
+++ b/docs/README.md.in
@@ -35,7 +35,7 @@ The _kernel_ (or _scheduler_) is `piccolo_start()` which is called by `main()` a
 the scheduler runs simultaously on _both_ cores. Tasks are created during initialization (before `piccolo_start()` is called) or
 may be created by another task during its execution. The scheduler (or schedulers) 
 picks the next task that can be run (in a round-robin fashion), and transfers control to that task at the precise point 
-where it left off execution during its last "turn" to run. The task may cooperatively relinquish control to the scheduler when 
+where it left off execution during its last "turn" to run. A task may cooperatively relinquish control to the scheduler when 
 it needs to pause or reaches a convenient point or the scheduler may pre-emptively "seize" control if the task has used its
 allocated slice of computing time. At that point, the scheduler moves on to the next task available to run. The details of this 
 process are described in the `Theory of Operation` and 
@@ -71,8 +71,8 @@ the task if so. This is faster than just running the task so it can check for it
 ### Signals
 A signal is simply a notification to a task that some event of interest has occurred. (A signal contains no data, and occupies no
  memory.) Each task has its own input signal channel.
-A signal can be sent to a task by another task, an interrupt service handler, or a callback routine. A task can 
-check for a signal or "block" until one arrives. There are more details in the theory of operation section.
+A signal can be sent to a task by another task, an interrupt service handler, or a callback routine. A task can just
+check for a signal, or can block until one arrives. There are more details in the theory of operation section.
 
 The Pico SDK also provides similar functionality with semaphores. However, the Piccolo integration with the SDK requires actually 
 running the task to check the semaphore which substantially increases the overhead while waiting and prevents the 
@@ -82,7 +82,7 @@ cores from sleeping.
 This is just a usage outline. Refer to the `Piccolo Plus APIs` tab for more details, and `piccolo_os_demo.c` for some examples.
 
 ### piccolo_init()
-In `main.c` you should initialize the SDK and the hardware as you like. In particular, here is the place to call `stdio_init_all()`. 
+In `main()` you should initialize the SDK and the hardware as you like. In particular, here is the place to call `stdio_init_all()`. 
 Any of the SDK functions can also be called from within a task. The exact order is not critical, but before creating any 
 tasks or starting the kernal, you must call `piccolo_init()` in order to set up the Piccolo OS data structures.
 
@@ -103,7 +103,7 @@ begins scheduling and running tasks. It never returns.
 
 ## Limitations
 Many! Piccolo OS Plus is @em@NOT@em@ intended to be a full scale RTOS. (After all, there is a perfectly good free one out there!)
-So it doesn't have device drivers per say. There are some parts of the C libraries that are not thread safe. But most of the SDK
+There are no device drivers per say. There are some parts of the C libraries that are not thread safe. But most of the SDK
 will work
 and C++ will also run just fine. See more details in the `Theory of Operation` tab in the documentation.
 
@@ -141,3 +141,14 @@ Some portions of code, intentionally or unintentionally, may or may not be att
 Copyright (C) 2017 Scott Nelson: CMCM - https://github.com/scttnlsn/cmcm  
 Copyright (C) 2015-2018 National Cheng Kung University, Taiwan: mini-arm-os - https://github.com/jserv/mini-arm-os  
 Copyright (C) 2014-2017 Chris Stones: Shovel OS - https://github.com/chris-stones/ShovelOS  
+
+# Release Notes
+
+## Version 1.01
+- Refactored the scheduler a bit to improve efficiency.
+- Optimized the non-blocking `piccolo_get_signal()` function.
+- The scheduler now will not sleep if any task is blocking to receive or send a signal. This improves response time at 
+the expense of power consumption. This behavior can be disabled by setting PICCOLO_OS_NO_IDLE_FOR_SIGNALS to `false` in 
+`piccolo_os.h` for lower power consumption if rapid response time is not critical.
+- Cleaned up the timing reports from `piccolo_os_demo`.
+- Numerous small documentation fixes.
